// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render 1`] = `
<span
  className="root"
>
  __TEXT__
</span>
`;

exports[`Text should render with attributes 1`] = `
<span
  className="root color-BODY_TEXT fontSize-fs10 fontWeight-fw400"
>
  __TEXT__
</span>
`;
